все конфигурации вservices.yml группируются по URL